--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://gitlab.df.gov/lindsayg/packed-circles.git"
+    "url": "https://github.com/lgensinger/visualization.git"
   },
   "keywords": [
     "visualization",
